Fix a bug in the extensions, there was a hardcoded URL

--- a/common/options_files/style.css
+++ b/common/options_files/style.css
@@ -722,3 +722,9 @@ b {
     margin-left: 6px;
     vertical-align: middle;
 }
+
+#fingerprint-stats-error {
+    display: none;
+    margin: 60px;
+    text-align: center;
+}
